--- a/front/src/styles/banner-slider.css
+++ b/front/src/styles/banner-slider.css
@@ -21,3 +21,10 @@
   background: var(--color-secondary);
   opacity: 1;
 }
+
+@media (max-width: 640px) {
+  .swiper-button-prev,
+  .swiper-button-next {
+    display: none !important;
+  }
+}
